# inference-sim

./: .claudeignore  .gitignore  .gitmodules  CLAUDE.md  CONTRIBUTING.md  CONTRIBUTORS.md  Dockerfile  QUICKSTART_ROOFLINE.md  README.md  ROOFLINE_CHANGES.md  ROOFLINE_V0.6.1_INTEGRATION.md  ROOFLINE_V2_CONFIG_FIX.md  ROOFLINE_V2_MINIMAL_CONFIG.md  SATURATION_EXPERIMENT_REPORT.md  STRATEGY_LEDGER.md  analytical-twin-models.md  analyze_sim_results.py  approach.md  arrival_times_generation.py  bb_optimizer_s5.py  blis.md  coefficients.yaml  defaults.yaml  experiment_configs_scenario5.py  experiment_constants.py  experiment_constants_inference.py  experiment_constants_test.py  experiment_constants_train.py  experiment_constants_val.py  functional_test.json  generate_appworld_workload.py  generate_random_prompts.py  generate_tau2_workload.py  go.mod  go.sum  hardware_config.json  hardware_config_minimal.json  hardware_config_roofline_valid.json  hardware_config_v2.json  m-large-new.yaml  (+46 more)
.github/: PULL_REQUEST_TEMPLATE.md
0.6/: 404.html  index.html
0.7/: 404.html  index.html
cmd/: calibrate.go  calibrate_adapter_reference_test.go  calibrate_test.go  coefficients_config.go  compose.go  convert.go  convert_otel.go  convert_otel_test.go  convert_test.go  default_config.go  default_config_test.go  dp_ep_cli_test.go  goodput.go  goodput_test.go  hfconfig.go  hfconfig_test.go  kv_metrics_output_test.go  lora_bundle_cli_test.go  lora_cli_test.go  lora_noop_test.go  lora_scorer_weight_test.go  moe_comm_backend_cli_test.go  observe.go  observe_cmd.go  observe_cmd_test.go  replay.go  (+15 more)
(+2152 files in other folders)
