[project]
name = "inference-sim"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "bayesian-optimization>=3.0.1",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "matplotlib>=3.9.4",
    "nbformat>=5.10.4",
    "optuna>=4.4.0",
    "optunahub>=0.3.1",
    "pandas>=2.3.1",
    "pandas-profiling>=3.2.0",
    "plotly>=6.2.0",
    "transformers>=4.53.0",
    "widgetsnbextension>=4.0.14",
]
